--- a/style.css
+++ b/style.css
@@ -13,6 +13,19 @@ body {
 	background-color:#EEE;
 }
 
+@media (min-aspect-ratio: 3375/5175) {
+	aside {
+	    display: none;
+	}
+
+	body {
+		background-image: url(background.jpg);
+		background-repeat: no-repeat;
+		background-size:100%;
+		background-attachment:fixed;
+	}
+}
+
 #title{
   padding: 15px;
   padding-top: 5px;
