--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 	display: inline;
 }
 
-.tg  {width: 100%; border-collapse:collapse;border-spacing:0;border:none;border-color:#ccc;}
-.tg td{font-family: 'Work Sans', sans-serif;font-size:14px;padding:10px 5px; padding-bottom: 5px; border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:rgba(200, 200, 200, 0.3);}
-.tg .tg-yw4l{vertical-align:top}
+.tg  {border-collapse:collapse;border-spacing:0;border:none;border-color:#ccc;}
+.tg td{width: 100%; vertical-align:top; font-family: 'Work Sans', sans-serif;font-size:14px;padding:10px 5px; padding-bottom: 5px; border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:rgba(200, 200, 200, 0.3);}
+.tg .tg-yw4l{}
 .tg .tg-b7b8{background-color:rgba(255, 255, 255, 0);vertical-align:top; padding-top: 0; padding-bottom: 10px;}
