--- a/style.css
+++ b/style.css
@@ -31,7 +31,17 @@ body {
   padding-top: 5px;
   padding-bottom: 5px;
   font-family: 'Barlow Semi Condensed';
-  font-size: 40px;
+  font-size: 45px;
+	color: #00b8c6;
+	width: 75%;
+}
+
+#subtitle{
+  padding: 15px;
+  padding-top: 5px;
+  padding-bottom: 0px;
+  font-family: 'Barlow Semi Condensed';
+  font-size: 25px;
 	color: #00b8c6;
 	width: 75%;
 }
